--- a/my-website/docs/k8s2.md
+++ b/my-website/docs/k8s2.md
@@ -49,7 +49,7 @@ kubebuilder init --domain test1.test2 --license apache2 --owner "The Kubernetes 
 cat PROJECT
 ~~~
 
-** TODO image **
+![enter description here](./images/1614304636185.png)
 
 ### 3\. 创建API
 
@@ -58,7 +58,7 @@ kubebuilder create api --group apps --version v1 --kind Test
 cat config/samples/apps_v1_test.yaml
 ~~~
 
-** TODO image **
+![enter description here](./images/1614304670523.png)
 
 ### 4\. Install the CRDs into the cluster
 
@@ -72,7 +72,7 @@ make install
 make run
 ```
 
-** TODO image **
+![enter description here](./images/1614304707772.png)
 
 ### 6\. 创建Resource of CRD
 
@@ -82,7 +82,7 @@ kubectl create -f config/samples/apps_v1_test.yaml
 
 可以看到controller的日志打印如下
 
-** TODO image **
+![enter description here](./images/1614304738769.png)
 
 ### 7\. 编译打包
 
@@ -98,7 +98,7 @@ docker build -t test-controller .
 
 成功会看到
 
-** TODO image **
+![enter description here](./images/1614304772724.png)
 
 可以通过docker images命令查看镜像，或者通过docker save和docker load导出和导入。
 
@@ -108,9 +108,14 @@ docker build -t test-controller .
 
 [https://book-v1.book.kubebuilder.io/beyond\_basics/controllers\_for\_core\_resources.html](https://book-v1.book.kubebuilder.io/beyond_basics/controllers_for_core_resources.html)
 
-* 1）创建后需要修改controllers/deployment\_controller.go文件：
-* import添加：corev1 "[k8s.io/api/core/v1](http://k8s.io/api/core/v1)"
-* import删除：appsv1 "testController/api/v1"
-* 2）修改函数SetupWithManager：
-* 将For(&appsv1.Test{})改为For(&corev1.Pod{})
-* 然后重新make run，则会收到pod创建、删除的event消息
+1. 创建后需要修改controllers/deployment\_controller.go文件：
+
+import添加：corev1 "[k8s.io/api/core/v1](http://k8s.io/api/core/v1)"
+
+import删除：appsv1 "testController/api/v1"
+
+2. 修改函数SetupWithManager：
+
+将For(&appsv1.Test{})改为For(&corev1.Pod{})
+
+然后重新make run，则会收到pod创建、删除的event消息
