修改文件: my-website/docs/k8s2.md

--- a/my-website/docs/k8s2.md
+++ b/my-website/docs/k8s2.md
@@ -3,7 +3,7 @@ id: k8s2
 title: 使用kubebuilder创建CRD及Controller
 ---
 
-## 安装kubebuilder
+## 1. 安装kubebuilder
 
 建议源码安装更容易些：
 
@@ -16,7 +16,7 @@ make install
 
 将./bin/kubebuilde拷贝到可执行路径
 
-## 使用kubebuilder创建CRD及Controller
+## 2. 使用kubebuilder创建CRD及Controller
 
 官方参考文档：
 
@@ -28,7 +28,7 @@ make install
 
 [https://blog.csdn.net/qianggezhishen/article/details/106995181](https://blog.csdn.net/qianggezhishen/article/details/106995181)
 
-### 1\. 准备工作
+### 2.1 准备工作
 
 ```
 mkdir -p testProject/src/testController
@@ -42,7 +42,7 @@ export GOPROXY=https://goproxy.io
 cd src/testController
 ```
 
-### 2\. 创建PROJECT
+### 2.2 创建PROJECT
 
 ~~~
 kubebuilder init --domain test1.test2 --license apache2 --owner "The Kubernetes Authors"
@@ -51,7 +51,7 @@ cat PROJECT
 
 ![enter description here](./images/1614304636185.png)
 
-### 3\. 创建API
+### 2.3 创建API
 
 ~~~
 kubebuilder create api --group apps --version v1 --kind Test
@@ -60,13 +60,13 @@ cat config/samples/apps_v1_test.yaml
 
 ![enter description here](./images/1614304670523.png)
 
-### 4\. Install the CRDs into the cluster
+### 2.4 Install the CRDs into the cluster
 
 ```
 make install
 ```
 
-### 5\. 在本地运行Controller
+### 2.5 在本地运行Controller
 
 ```
 make run
@@ -74,7 +74,7 @@ make run
 
 ![enter description here](./images/1614304707772.png)
 
-### 6\. 创建Resource of CRD
+### 2.6 创建Resource of CRD
 
 ```
 kubectl create -f config/samples/apps_v1_test.yaml
@@ -84,7 +84,7 @@ kubectl create -f config/samples/apps_v1_test.yaml
 
 ![enter description here](./images/1614304738769.png)
 
-### 7\. 编译打包
+### 2.7 编译打包
 
 首先修改Dockerfile：
 *1）在RUN go mod download前插入一行ENV GOPROXY=https://goproxy.cn,direct*
@@ -102,16 +102,18 @@ docker build -t test-controller .
 
 可以通过docker images命令查看镜像，或者通过docker save和docker load导出和导入。
 
-## 创建Core Resource的controller
+## 3. 创建Core Resource的controller
 
 参考：
 
 [https://book-v1.book.kubebuilder.io/beyond\_basics/controllers\_for\_core\_resources.html](https://book-v1.book.kubebuilder.io/beyond_basics/controllers_for_core_resources.html)
 
 1. 创建后需要修改controllers/deployment\_controller.go文件：
-import添加：corev1 "[k8s.io/api/core/v1](http://k8s.io/api/core/v1)"
-import删除：appsv1 "testController/api/v1"
+    
+       import添加：corev1 "[k8s.io/api/core/v1](http://k8s.io/api/core/v1)"
+       import删除：appsv1 "testController/api/v1"
 
 2. 修改函数SetupWithManager：
-将For(&appsv1.Test{})改为For(&corev1.Pod{})
-然后重新make run，则会收到pod创建、删除的event消息
+         
+	   将For(&appsv1.Test{})改为For(&corev1.Pod{})
+       然后重新make run，则会收到pod创建、删除的event消息
