--- a/Gridea/posts/82599.md
+++ b/Gridea/posts/82599.md
@@ -13,14 +13,14 @@ isTop: false
 网卡固件跟网卡驱动不太一样，OEM厂商通常都会自己定制固件，而且一种网卡对应多个型号，每个型号的固件版本通常都不一样。
 
 首先通过lspci -vvv发现网卡是DELL的板载卡：
-![enter description here](./images/1625469262421.png)
+![enter description here](https://rexrock.github.io/post-images/1625469262421.png)
 查看服务器具体型号：
-![enter description here](./images/1625469502665.png)
+![enter description here](https://rexrock.github.io/post-images/1625469502665.png)
 登录官网下载：
 https://www.dell.com/support/home/zh-cn/product-support/product/poweredge-r730/drivers
-![enter description here](./images/1625469525167.png)
+![enter description here](https://rexrock.github.io/post-images/1625469525167.png)
 下载之后是个.BIN文件，直接执行即可。
-![enter description here](./images/1625469584689.png)
+![enter description here](https://rexrock.github.io/post-images/1625469584689.png)
 报错提示无法获取设备内存信息，需要升级驱动，那么去Intel官网下载最新驱动：
 https://downloadcenter.intel.com/product/32609/Intel-82599-10-Gigabit-Ethernet-Controller
 然后编译、打包、安装：
