修改文件: Gridea/posts/全链路监控主动探测方案.md

--- a/Gridea/posts/全链路监控主动探测方案.md
+++ b/Gridea/posts/全链路监控主动探测方案.md
@@ -5,28 +5,46 @@ tags: 全链路
 
 
 ## 报文构造策略
-Agent：
-根据指定的五元组构造报文，并染色0x28， fragid根据五元组+time计算hash;
 
-监控模块：
-检索然0x28报文上送到goflow，并drop该报文；
-1. goflow上送报文信息，协议需要新增iplist字段；
-2. goflow为报文添加ip option，值为本机agentip;
-3. goflow将重新构造后的报文，通过br-int重新注入ovs;
+### 1. Agent
 
-结果展示：
-1. 根据五元组过滤符合条件的并且iplist为空并且染色0x28的第一个报文；
-2. 获取该报文的fragid；
-3. 根据fragid获取所有符合条件的并且染色0x28的报文；
-4. 按照长度排列报文即报文的传输路径；
-5. 再根据五元组获取符合条件并且agnetip为始发节点并且染色0x26的第一个报文；
-6. 获取该报文的fragid；
-7. 根据fragid获取所有符合条件并且染色为0x26的报文；
-8. 根据报文传输路径排列报文并返回结果；
+主动探测和被动染色逻辑不变，新增嗅探模块，用来接收染色报文首包的五元组信息：
+1. 根据指定的五元组构造报文，fragid为固定值，agentip添加到ip options;
+2. 报文染色0x28；
+3. 将报文通过br-int口重新注入；
 
-延迟计算：
+### 2. 监控模块
+
+1. 检索0x26染色报文：
+1）如果是始发节点，将五元组传递给嗅探节点；
+2）否则正常采样并转发；
+2. 检索0x28染色报文：
+1）如果是始发节点，什么都不做；
+2）如果非始发节点，采样并drop；
+
+
+### 3. goflow
+
+对于0x28的报文
+1. 上传信息，iplist;
+2. 将本机agentip添加到ip options；
+3. 将报文通过br-int重新注入；
+
+### 4. 结果展示
+1. 获得嗅探报文传输轨迹：
+1）根据五元组过滤符合条件&&0x28并且长度最长的报文；
+2）iplist + agentip即报文的传输轨迹；
+
+2. 获取真实报文传输轨迹
+1）根据五元组获取符合条件&&0x26并且agnetip为始发节点的第一个报文；
+2）获取该报文的fragid；
+3）根据fragid获取所有符合条件并且染色为0x26的报文；
+4）根据报文传输路径排列报文并返回结果；
+
+### 5. 延迟计算
+
  1. 根据五元组获取符合条件并且agnetip为始发节点并且染色0x26的所有报文报文；
- 2. 便利每个报文的fragid；
+ 2. 遍历每个报文的fragid；
  3. 根据fragid获取所有报文，并计算相邻节点间传输时延，并记录结果；
  4. 根据所有报文延迟结果，计算P99、P999、P9999、平均、最大、最小时延数据并返回；
  
