修改文件: Gridea/posts/全链路监控主动探测方案.md

--- a/Gridea/posts/全链路监控主动探测方案.md
+++ b/Gridea/posts/全链路监控主动探测方案.md
@@ -1,5 +1,5 @@
 ---
-title: 全链路监控主动探测方案
+title: 全链路监控传输轨迹计算方案
 tags: 全链路
 ---
 
@@ -31,7 +31,7 @@ tags: 全链路
 3. 将报文通过br-int重新注入；
 
 ### 4. 结果展示
-1. 获得嗅探报文传输轨迹：
+1. 获得嗅探报文传输轨迹
 1）根据五元组过滤符合条件&&0x28并且长度最长的报文；
 2）iplist + agentip即报文的传输轨迹；
 
