修改文件: Gridea/posts/全链路监控传输轨迹计算方案.md

--- a/Gridea/posts/全链路监控传输轨迹计算方案.md
+++ b/Gridea/posts/全链路监控传输轨迹计算方案.md
@@ -9,14 +9,14 @@ tags: 全链路
 ### 1. Agent
 
 主动探测和被动染色逻辑不变，新增嗅探模块，用来接收染色报文首包的五元组信息：
-1. 根据指定的五元组构造报文，fragid为固定值，agentip添加到ip options;
+1. 根据指定的五元组构造报文，fragid为五元组+time的hash，agentip添加到ip options;
 2. 报文染色0x28；
 3. 将报文通过br-int口重新注入；
 
 ### 2. 监控模块
 
 1. 检索0x26染色报文：
-1）如果是始发节点，将五元组传递给嗅探节点；
+1）如果是始发节点，将五元组传递给嗅探模块；
 2）否则正常采样并转发；
 2. 检索0x28染色报文：
 1）如果是始发节点，什么都不做；
@@ -32,19 +32,16 @@ tags: 全链路
 
 ### 4. 结果展示
 1. 获得嗅探报文传输轨迹
-1）根据五元组过滤符合条件&&0x28并且长度最长的报文；
-2）iplist + agentip即报文的传输轨迹；
-
-2. 获取真实报文传输轨迹
-1）根据五元组获取符合条件&&0x26并且agnetip为始发节点的第一个报文；
+1）根据五元组过滤符合条件&&0x28的第一个报文；
 2）获取该报文的fragid；
-3）根据fragid获取所有符合条件并且染色为0x26的报文；
-4）根据报文传输路径排列报文并返回结果；
+3）根据fragid && 0x28过滤所有符合条件报文；
+4）最长报文iplist + agentip即报文的传输轨迹；
+5）记录每个节点上报文的五元组IP，始发节点的五元组即过滤条件中的五元组；
 
 ### 5. 延迟计算
 
- 1. 根据五元组获取符合条件并且agnetip为始发节点并且染色0x26的所有报文报文；
- 2. 遍历每个报文的fragid；
- 3. 根据fragid获取所有报文，并计算相邻节点间传输时延，并记录结果；
+ 1. 根据传输轨迹中每个节点上记录的五元组信息，获取每个节点上该五元组的所有、部分报文；
+ 2. 遍历始发节点上获取的每一个报文，根据fragid获取其他节点上该报文的记录；
+ 3. 计算相邻节点间传输时延，并记录结果；
  4. 根据所有报文延迟结果，计算P99、P999、P9999、平均、最大、最小时延数据并返回；
  
