--- a/Gridea/posts/全链路监控传输轨迹计算方案.md
+++ b/Gridea/posts/全链路监控传输轨迹计算方案.md
@@ -32,7 +32,7 @@ tags: 全链路
 
 ### 4. 结果展示
 1. 获得嗅探报文传输轨迹
-1）根据五元组过滤符合条件&&0x28的第一个报文；
+1）根据五元组过滤符合条件&&0x28的第一个报文（实际可能不是第一个，随便一个，反正返回一个就行）；
 2）获取该报文的fragid；
 3）根据fragid && 0x28过滤所有符合条件报文；
 4）最长报文iplist + agentip即报文的传输轨迹；
