修改文件: Gridea/posts/全链路监控传输轨迹计算方案.md

--- a/Gridea/posts/全链路监控传输轨迹计算方案.md
+++ b/Gridea/posts/全链路监控传输轨迹计算方案.md
@@ -20,7 +20,8 @@ tags: 全链路
 2）否则正常采样并转发；
 2. 检索0x28染色报文：
 1）如果是始发节点，什么都不做；
-2）如果非始发节点，采样并drop；
+2）如果非始发节点，并且非br-int进入，采样并drop；
+3）如果非始发节点，并且br-int进入，直接转发；
 
 
 ### 3. goflow
