修改文件: Gridea/posts/全链路监控传输轨迹计算方案.md

--- a/Gridea/posts/全链路监控传输轨迹计算方案.md
+++ b/Gridea/posts/全链路监控传输轨迹计算方案.md
@@ -46,3 +46,11 @@ tags: 全链路
  3. 计算相邻节点间传输时延，并记录结果；
  4. 根据所有报文延迟结果，计算P99、P999、P9999、平均、最大、最小时延数据并返回；
  
+
+##  开发顺序
+
+1. goflow改动；
+2. 报文构造 + 解析；
+3. agent和goflow，嗅探功能开发；
+4. 结果展示修改；
+5. 延迟计算修改；
