--- a/Gridea/posts/k8s3.md
+++ b/Gridea/posts/k8s3.md
@@ -18,6 +18,8 @@ isTop: false
 
 ## 2\. 通过istioctl安装
 
+[Profile说明](https://istio.io/latest/docs/setup/additional-setup/config-profiles/)
+
 ```
 istioctl install
 ```
